--- a/index.html
+++ b/index.html
@@ -24,64 +24,38 @@
 			max-height: 100%;
 		}
 	</style>
-
-	
 </head>
 <body>
 
-
-
 <div id="map" style="width: 600px; height: 400px;"></div>
 <script>
+	// Initialize the map and set its view to the desired location
+	const map = L.map('map').setView([48.8566, 2.3522], 13); // Set view to Paris
 
-	const map = L.map('map').setView([48.8566, 2.3522], 1.5);
-        }).addTo(map);
-        fetch('https://github.com/Davidorino/Leaflet-GeoJSON/blob/main/map.geojson')
-    .then(response => response.json())
-    .then(data => {
-        L.geoJSON(data).addTo(map);
-    })
-	//const map = L.map('map').setView([51.505, -0.09], 13);
-
+	// Add OpenStreetMap tiles to the map
 	const tiles = L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
 		maxZoom: 19,
 		attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>'
-	//}).addTo(map);
+	}).addTo(map);
 
-	//const marker = L.marker([51.5, -0.09]).addTo(map)
-	//	.bindPopup('<b>Hello world!</b><br />I am a popup.').openPopup();
+	// Fetch GeoJSON data and add it to the map
+	fetch('https://raw.githubusercontent.com/Davidorino/Leaflet-GeoJSON/main/map.geojson')
+		.then(response => response.json())
+		.then(data => {
+			L.geoJSON(data).addTo(map);
+		})
+		.catch(error => console.error('Error loading the GeoJSON data:', error));
 
-	//const circle = L.circle([51.508, -0.11], {
-	//	color: 'red',
-	//	fillColor: '#f03',
-	//	fillOpacity: 0.5,
-	//	radius: 500
-	//}).addTo(map).bindPopup('I am a circle.');
-
-	//const polygon = L.polygon([
-	//	[51.509, -0.08],
-	//	[51.503, -0.06],
-	//	[51.51, -0.047]
-	//]).addTo(map).bindPopup('I am a polygon.');
-//
-
-	//const popup = L.popup()
-	//	.setLatLng([51.513, -0.09])
-	//	.setContent('I am a standalone popup.')
-	//	.openOn(map);
-
+	// Function to handle map clicks and show a popup with the clicked coordinates
+	const popup = L.popup();
 	function onMapClick(e) {
 		popup
 			.setLatLng(e.latlng)
 			.setContent(`This is ${e.latlng.toString()}`)
 			.openOn(map);
-	
-
+	}
 	map.on('click', onMapClick);
-
 </script>
-
-
 
 </body>
 </html>
