--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <div id="map" style="width: 600px; height: 400px;"></div>
 <script>
 	// Initialize the map and set its view to the desired location
-	const map = L.map('map').setView([48.8566, 2.3522], 13); // Set view to Paris
+	const map = L.map('map').setView([20, 0], 2); // Set view to a world view
 
 	// Add OpenStreetMap tiles to the map
 	const tiles = L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
